GNOME Bugzilla – Bug 758286
qtitem: GstQSGTexture leaks in updatePaintNode
Last modified: 2016-01-15 03:18:34 UTC
Created attachment 315829 [details] [review] qtitem: use existing GstQSGTexture There is a massive leak caused by creating GstQSGTexture in every updatePaintNode call. Example: 1. run qt/qml/play example included in gst-plugins-bad repository I'm attaching basic patch where existing GstQSGTexture is reused.
Thanks! commit 21348cf772e240956b5857ad4e69e9635683d372 Author: Roman Nowicki <rnowicki@sims.pl> Date: Fri Nov 20 11:18:43 2015 +1100 qml: reuse existing GstQSGTexture Fixes a memory leak leaking the texture objects. https://bugzilla.gnome.org/show_bug.cgi?id=758286 and 1.6 c3762420f708399b41628bf65f6ffd0d1f2d8a3a
*** Bug 758700 has been marked as a duplicate of this bug. ***
Created attachment 318538 [details] [review] qtitem: Mark material dirty After this fix Qt might not redraw the scene graph at least on some systems. Material needs to be marked as dirty so that Qt know that texture has changed.
Thanks! commit 155f0acfab8bbe0e30258e4a8726ea2adb2b073c Author: Sergey Borovkov <serge.borovkov@gmail.com> Date: Fri Jan 8 22:19:06 2016 +0300 qml: Mark material dirty when texture buffer is updated Qt might not redraw the scene otherwise. https://bugzilla.gnome.org/show_bug.cgi?id=758286 and 1.6 caee1d0446122f2afdf74fec9db2846c687d998a